sponsor page image alignment fix:

--- a/public/css/sponsors.css
+++ b/public/css/sponsors.css
@@ -14,7 +14,7 @@ h4{
     max-width: 1100px;
 }
 
-.spons-content{ 
+.spons-content{
     position: relative;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
@@ -53,199 +53,199 @@ h4{
     color: #0431B4;
 }
 
-img[src="media/sap.gif"]{
+img[src="media/sponsors/sap.gif"]{
     margin-top: 20px;
     height:auto;
     width:130px;
 }
 
-img[src="media/ti.png"]{
+img[src="media/sponsors/ti.png"]{
     margin-top: 10px;
     height:auto;
     width:150px;
 }
 
-img[src="media/i3indya.png"]{
+img[src="media/sponsors/i3indya.png"]{
     margin-top: 0px;
     height:auto;
     width:120px;
 }
 
-img[src="media/av.jpg"]{
+img[src="media/sponsors/av.jpg"]{
     margin-top: 25px;
     height:auto;
     width:150px;
 }
 
-img[src="media/g4g.png"]{
+img[src="media/sponsors/g4g.png"]{
     margin-top: 25px;
     height:auto;
     width:150px;
 }
 
-img[src="media/inspi.png"]{
+img[src="media/sponsors/inspi.png"]{
     margin-top: 20px;
     height:auto;
     width:150px;
 }
 
-img[src="media/hackerearth.png"]{
+img[src="media/sponsors/hackerearth.png"]{
     margin-top: 30px;
     height:auto;
     width:150px;
 }
 
-img[src="media/hr.jpg"]{
+img[src="media/sponsors/hr.jpg"]{
     margin-top: 10px;
     height:auto;
     width:80px;
 }
 
-img[src="media/srjna.png"]{
+img[src="media/sponsors/srjna.png"]{
     margin-top: 10px;
     height:auto;
     width:150px;
 }
 
-img[src="media/tvg.png"]{
+img[src="media/sponsors/tvg.png"]{
     margin-top: 15px;
     height:auto;
     width:100px;
 }
 
-img[src="media/ve.jpg"]{
+img[src="media/sponsors/ve.jpg"]{
     margin-top: 20px;
     height:auto;
     width:150px;
 }
 
-img[src="media/adideva.png"]{
+img[src="media/sponsors/adideva.png"]{
     margin-top: 10px;
     height:auto;
     width:150px;
 }
 
-img[src="media/roboraze.png"]{
+img[src="media/sponsors/roboraze.png"]{
     margin-top: 30px;
     height:auto;
     width:150px;
 }
 
-img[src="media/zw.png"]{
+img[src="media/sponsors/zw.png"]{
     margin-top: 20px;
     height:auto;
     width:150px;
 }
 
-img[src="media/finx.png"]{
+img[src="media/sponsors/finx.png"]{
     margin-top: 10px;
     height:auto;
     width:100px;
 }
 
-img[src="media/space.png"]{
+img[src="media/sponsors/space.png"]{
     margin-top: 20px;
     height:auto;
     width:150px;
 }
 
-img[src="media/tcf.png"]{
+img[src="media/sponsors/tcf.png"]{
     margin-top: 20px;
     height:auto;
     width:130px;
 }
 
-img[src="media/dream.jpg"]{
+img[src="media/sponsors/dream.jpg"]{
     margin-top: -10px;
     height:auto;
     width:140px;
 }
 
-img[src="media/ivycamp.jpg"]{
+img[src="media/sponsors/ivycamp.jpg"]{
     margin-top: 0px;
     height:auto;
     width:150px;
 }
 
-img[src="media/startup.png"]{
+img[src="media/sponsors/startup.png"]{
     margin-top: 10px;
     height:auto;
     width:170px;
 }
 
-img[src="media/adword.png"]{
+img[src="media/sponsors/adword.png"]{
     margin-top: 0px;
     height:auto;
     width:150px;
 }
 
-img[src="media/ketto.jpg"]{
+img[src="media/sponsors/ketto.jpg"]{
     margin-top: -10px;
     height:auto;
     width:150px;
 }
 
-img[src="media/wh.jpg"]{
+img[src="media/sponsors/wh.jpg"]{
     margin-top: -10px;
     height:auto;
     width:120px;
 }
 
-img[src="media/ebay.jpg"]{
+img[src="media/sponsors/ebay.jpg"]{
     margin-top: 0px;
     height:auto;
     width:150px;
 }
 
-img[src="media/pizza.jpg"]{
+img[src="media/sponsors/pizza.jpg"]{
     margin-top: 20px;
     height:auto;
     width:100px;
 }
 
-img[src="media/youth.jpg"]{
+img[src="media/sponsors/youth.jpg"]{
     margin-top: 20px;
     height:auto;
     width:140px;
 }
 
-img[src="media/bb.png"]{
+img[src="media/sponsors/bb.png"]{
     margin-top: 0px;
     height:auto;
     width:120px;
 }
 
-img[src="media/2019.jpg"]{
+img[src="media/sponsors/2019.jpg"]{
     margin-top: 20px;
     height:auto;
     width:120px;
 }
 
-img[src="media/me.png"]{
+img[src="media/sponsors/me.png"]{
     margin-top: 0px;
     height:auto;
     width:100px;
 }
 
-img[src="media/knowyourfest.png"]{
+img[src="media/sponsors/knowyourfest.png"]{
     margin-top: 20px;
     height:auto;
     width:150px;
 }
 
-img[src="media/festpav.png"]{
+img[src="media/sponsors/festpav.png"]{
     margin-top: 20px;
     height:auto;
     width:150px;
 }
 
-img[src="media/fe.jpg"]{
+img[src="media/sponsors/fe.jpg"]{
     margin-top: 20px;
     height:auto;
     width:70px;
 }
 
-img[src="media/ae.png"]{
+img[src="media/sponsors/ae.png"]{
     margin-top: 0px;
     height:auto;
     width:100px;
